DTS-41663:Testing Kpis error message handle